# AFKiller

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
assets/: CREDITS.md  icon.icns
docs/plans/: 2026-05-24-databricks-cluster-stop.md
scripts/: generate_icons.py
src/afkiller/: __main__.py  app.py  config.py  databricks.py  editors.py  focus.py  process.py  settings.py  tray.py  warning.py
src/cursor_assassin/: __main__.py  app.py  config.py  databricks.py  idle.py  process.py  settings.py  tray.py  warning.py
