[project]
name = "afkiller"
version = "0.5.0"
description = "Tray app that auto-closes your code editor (VS Code, Cursor, Windsurf, Antigravity, Kiro) on idle/AFK to stop billable Databricks SSH sessions."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "skad00sh" }]
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "platformdirs>=4.0.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
afkiller = "afkiller.app:main"

[dependency-groups]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afkiller"]
